update ci script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
       with:
         check: melpa
         file: gptel-copilot.el
+        ignore_warnings: false
+        warnings_as_errors: false
 
     - uses: leotaku/elisp-check@master
       with:
