refactoring, checkdoc fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,11 @@ jobs:
       matrix:
         emacs_version:
           - 27.1
-          - 29.4
+          - 29.3
         ignore_warnings:
           - false
         warnings_as_errors:
-          - true
+          - false
         check:
           - melpa
         file:
@@ -29,6 +29,7 @@ jobs:
       - uses: purcell/setup-emacs@master
         with:
           version: ${{ matrix.emacs_version }}
+
       - uses: leotaku/elisp-check@master
         with:
           check: ${{ matrix.check }}
