--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         ignore_warnings:
           - false
         warnings_as_errors:
-          - false
+          - true
         check:
           - melpa
         file:
@@ -52,7 +52,7 @@ jobs:
         check:
           - ert
         file:
-          - test/gptel-copilot-test.el
+          - test/test-gptel-copilot.el
 
     steps:
       - uses: actions/checkout@v4
